--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@swimlane/ngx-charts": "^7.1.1",
+    "angular2-uuid": "^1.1.1",
+    "bulma": "^0.6.2",
     "core-js": "^2.4.1",
+    "d3": "^5.0.0",
     "rxjs": "^5.5.6",
+    "tone": "^0.11.11",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
