--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bulma": "^0.6.2",
     "core-js": "^2.4.1",
     "d3": "^5.0.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.5.6",
     "tone": "^0.11.11",
     "zone.js": "^0.8.19"
